k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lambda-gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lambda-gateway
  template:
    metadata:
      labels:
        app: lambda-gateway
    spec:
      serviceAccountName: hello-envoy-lambda
      containers:
        - name: lambda-gateway
          image: public.ecr.aws/awsguru/lambda-gateway:latest
          ports:
            - containerPort: 8080
