k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lambda-gateway-svc
spec:
  selector:
    app: lambda-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
