k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "lambda-gateway-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
  labels:
    app: lambda-gateway-ingress
spec:
  defaultBackend:
    service:
      name: lambda-gateway-svc
      port:
        number: 80
